# fastapi-app-ext

./: .gitignore  LICENSE  MANIFEST.in  README.md  setup.cfg
fastapi_app_ext/: __init__.py  _app_ext.py  app_ext.py
tests/: __init__.py  main.py
