[metadata]
name = fastapi-app-ext
version = 0.1.4
author = HanGuangZheng
author_email = hanguangzheng@qq.com
description = The extended function library of fastapi can be read README.md
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hgz1989/fastapi-app-ext
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent


[options]
package_dir =
packages = find:
python_requires = >=3.8
install_requires =
# 依赖列表（如果有的话）
    fastapi>=0.114.0
include_package_data = True


[options.package_data]
fastapi_app_ext = assets/*


[options.packages.find]
where =